crates/codira_codegen/src/snapshots/codira_codegen__test__loop_issue_llvm13.snap
---
source: crates/codira_codegen/src/test.rs
assertion_line: 1062
expression: "\n    pub fn issue() -> i32 {\n        loop {\n        }\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x i64*]

define i32 @issue() {
body:
  br label %loop

loop:                                             ; preds = %loop, %body
  br label %loop
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x i64*] zeroinitializer

