crates/codira_codegen/src/snapshots/codira_codegen__test__negate_op_i32.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    pub fn negate(a: i32) -> i32 { -a }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x i64*]

define i32 @negate(i32 %0) {
body:
  %neg = sub i32 0, %0
  ret i32 %neg
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x i64*] zeroinitializer

